aks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
spec:
  replicas: 3  # Number of desired replicas (pods)
  selector:
    matchLabels:
      app: my-app  # Selector to match the pods controlled by this deployment
  template:
    metadata:
      labels:
        app: my-app  # Label for the pods controlled by this deployment
    spec:
      containers:
      - name: my-app-container  # Name of the container
        image: ncplcr.azurecr.io/ncplproject:latest  # Docker image to use
        ports:
        - containerPort: 80  # Port the container exposes
